--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
   "name": "next-boilerplate",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "biome check --write .",
+    "prepare": "husky"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.0"
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "jiti": "^2.4.2",
+    "next": "^15.3.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@biomejs/biome": "^1.9.4",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@types/bun": "^1.2.9",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
+    "tailwindcss": "^4.1.4",
+    "tsc-files": "^1.1.4",
+    "typescript": "^5.8.3"
+  },
+  "trustedDependencies": ["@biomejs/biome"],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
