--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:best-practices", ":preserveSemverRanges"],
-  "schedule": ["0 0 * * *"],
+  "schedule": ["* * * * *"],
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch"],
