--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:best-practices", ":preserveSemverRanges"],
   "schedule": ["* * * * *"],
+  "automerge": true,
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch"],
