--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,11 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended",
-    ":approveMajorUpdates",
-    ":automergeMinor",
-    ":automergeRequireAllStatusChecks",
-    ":automergeStableNonMajor",
-    ":configMigration"
-  ]
+  "extends": ["config:recommended"]
 }
