--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "bun --bun next dev --turbopack",
-    "build": "bun --bun next build",
-    "start": "bun --bun next start",
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "ts-check": "tsc",
@@ -13,16 +13,17 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.13.8",
+    "geist": "^1.4.2",
     "jiti": "^2.4.2",
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.25.58"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@tailwindcss/postcss": "^4.1.8",
-    "@types/bun": "^1.2.15",
     "@types/node": "^24.0.0",
     "@types/react": "^19.1.7",
     "@types/react-dom": "^19.1.6",
