--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
         "name": "next"
       }
     ],
-    "types": ["bun-types"]
+    "types": []
   },
   "include": ["next-env.d.ts", "src", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
