--- a/biome.json
+++ b/biome.json
@@ -6,17 +6,20 @@
     "useIgnoreFile": true
   },
   "files": {
-    "ignoreUnknown": false
+    "ignoreUnknown": false,
+    "includes": ["**", "!src/styles/**/*.css", "!drizzle/**"]
   },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
     "lineEnding": "lf"
   },
-  "organizeImports": {
-    "enabled": true
-  },
+  "assist": { "actions": { "source": { "organizeImports": "on" } } },
   "linter": {
+    "domains": {
+      "next": "recommended",
+      "react": "recommended"
+    },
     "enabled": true,
     "rules": {
       "recommended": true,
@@ -31,12 +34,24 @@
         "noUnusedVariables": "error"
       },
       "nursery": {
-        "noDuplicateElseIf": "warn",
         "useSortedClasses": "warn"
       },
       "suspicious": {
         "noConsole": "warn",
-        "useAwait": "warn"
+        "useAwait": "warn",
+        "noDuplicateElseIf": "warn"
+      },
+      "style": {
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       }
     }
   },
