--- a/package.json
+++ b/package.json
@@ -15,25 +15,29 @@
     "@t3-oss/env-nextjs": "^0.13.8",
     "geist": "^1.4.2",
     "jiti": "^2.4.2",
-    "next": "^15.3.3",
+    "next": "^15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.58"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@tailwindcss/postcss": "^4.1.8",
-    "@types/node": "^24.0.0",
-    "@types/react": "^19.1.7",
+    "@biomejs/biome": "^2.0.5",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.0",
-    "tailwindcss": "^4.1.8",
+    "lint-staged": "^16.1.2",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3"
   },
-  "trustedDependencies": ["@biomejs/biome", "@tailwindcss/oxide", "sharp"],
+  "trustedDependencies": [
+    "@biomejs/biome",
+    "@tailwindcss/oxide",
+    "sharp"
+  ],
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
