--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**", "!src/styles/**/*.css", "!drizzle/**"]
+    "includes": ["**"]
   },
   "formatter": {
     "enabled": true,
@@ -39,7 +39,8 @@
       "suspicious": {
         "noConsole": "warn",
         "useAwait": "warn",
-        "noDuplicateElseIf": "warn"
+        "noDuplicateElseIf": "warn",
+        "noUnknownAtRules": "warn"
       },
       "style": {
         "noParameterAssign": "error",
